[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# package-mode = false # requires poetry^1.8


[tool.poetry.dependencies]
python = "^3.10, <3.12"
mitsuba = "~3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
